# python-project-52

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: test-coverage.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: admin.py  build.sh  mixins.py  settings.py  tests.py  urls.py  views.py
task_manager/fixtures/: labels.json  statuses.json  tasks.json  users.json
task_manager/labels/: apps.py  forms.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: apps.py  forms.py  models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/task_manager/: settings.py
task_manager/tasks/: apps.py  filters.py  forms.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py
task_manager/templates/: 404.html  about.html  form.html  index.html  layout.html  navigation.html
task_manager/templates/labels/: delete.html  index.html  update.html
task_manager/templates/registration/: login.html  register.html
task_manager/templates/statuses/: delete.html  index.html
task_manager/templates/tasks/: create.html  delete.html  index.html  task.html  update.html
task_manager/templates/users/: create.html  delete.html  index.html  update.html
task_manager/tests/: __init__.py
task_manager/tests/labels/: test.py
task_manager/tests/statuses/: test.py
task_manager/tests/tasks/: test.py
task_manager/tests/users/: test.py
task_manager/users/: forms.py  models.py  urls.py  views.py
(+1 files in other folders)
