[tool.poetry]
name = "hexlet-code"
version = "0.8.2"
description = ""
authors = ["Konstantin Vlasov <ke.vlasov@yandex.ru>"]
readme = "README.md"
packages = [
  { include = "task_manager" },
]

repository = "https://github.com/kvlas/python-project-52"
homepage = "https://github.com/kvlas/python-project-52"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.4"
django-bootstrap5 = "^24.3"
django_filter = "^24.3"
psycopg2-binary = "^2.9.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
