[tool.poetry]
name = "hexlet-code"
version = "0.9.1"
description = ""
authors = ["Konstantin Vlasov <ke.vlasov@yandex.ru>"]
readme = "README.md"
packages = [
  { include = "task_manager" },
]

repository = "https://github.com/kvlas/python-project-52"
homepage = "https://github.com/kvlas/python-project-52"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.4"
django-bootstrap5 = "^24.3"
django_filter = "^24.3"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"
gunicorn = "^23.0.0"
dj-database-url = "^2.3.0"
whitenoise = "^6.8.2"
rollbar = "^1.1.0"


[tool.poetry.group.dev.dependencies]
coverage = "^7.6.9"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
